Fix long title overflow in AppBar.

--- a/src/mobile/components/MainView/index.css
+++ b/src/mobile/components/MainView/index.css
@@ -11,6 +11,7 @@
 }
 
 .MainView-title {
+  overflow: hidden;
   flex-grow: 1;
 }
 
